--- a/index.html
+++ b/index.html
@@ -39,37 +39,37 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>What makes up Jessica Wolff:</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/frosted-full.jpg" class="image fit thumb"><img src="images/frosted-thumb.jpg" alt="A graphic design piece for the Frosted Fatty event in Minnesota." /></a>
+								<h3>Graphic Design</h3>
+								<p>During my first career as a Resort Services Manager for a ski hill in Duluth, I taught myself how to work with Adobe Illustrator, and Photoshop.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/brewski-full.jpg" class="image fit thumb"><img src="images/brewski-thumb.jpg" alt="A graphic design piece done for the Brewski event in Minnesota." /></a>
+								<h3>Adobe Illustrator</h3>
+								<p>I created posters like the two above for the organization, and several others including Borah, Trek, City of Duluth, and Zenith Bikes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/flex-full.jpg" class="image fit thumb"><img src="images/flex-thumb.png" alt="A night skyline view of Minneapolis, Minnesota" /></a>
+								<h3><a href="https://github.com/LambdaSchool/UI-III-Flexbox.git">Project: Flexbox</a></h3>
+								<p>This project was to prepare to understand the differences in the website from display:inline-block, to display:flex.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/responsive-full.png" class="image fit thumb"><img src="images/responsive-thumb.png" alt="The lighthouse outside of Duluth, Minnesota" /></a>
+								<h3><a href="https://github.com/jleahwolff/responsive-web-design-I.git">Project: Responsive Design</a></h3>
+								<p>This project involved taking the original code from our Flexbox project, and turning it into a responsive design to adapt to tablet and mobile options.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/family.jpg" class="image fit thumb"><img src="images/family.jpg" alt="The girls in the Wolff family, standing together in hunting attire, smiling" /></a>
+								<h3>Family</h3>
+								<p>Family is the most important thing about me.  I love to spend time with them as much as possible.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/friends.jpg" class="image fit thumb"><img src="images/friends.jpg" alt="Friends standing together, smiling" /></a>
+								<h3>Friends</h3>
+								<p>My friends are my stability, without them, I would be lost in the world. </p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -80,7 +80,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>If you're interested in talking more about what I can offer your team, please reach out using the form below or check out my social channels by clicking on the media icons in the footer.  Thank you!</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -99,16 +99,16 @@
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
+										Duluth, MN 55811<br />
 										United States
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										952-555-8599
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">jleahhwolff@gmail.com</a>
 									</li>
 								</ul>
 							</div>
